--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href = "index.css" rel = "stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <button>Add Student</button>
     </form>
     <script>
-        
+
         const addForm = document.querySelector('form')
         const nameInput = document.querySelector('input')
 
