--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href = "index.css" rel = "stylesheet">
+    <link href = "/css" rel = "stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <form>
         <input type="text" placeholder="Type name here"/>
         <button>Add Student</button>
-        
+
     </form>
     <script>
 
